--- a/app/components/Footer/style.scss
+++ b/app/components/Footer/style.scss
@@ -1,59 +1,36 @@
 @import '../../styles/base/main.scss';
 .Footer{
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem 3rem ;
-  background-color: $primary-green;
-  background-image: linear-gradient(to bottom right, rgba(0, 160, 161, 0.8), rgba(0, 160, 161, 1));
-  flex-wrap: wrap;
-  gap: 2rem;
-  margin-top: auto;
-  @media  (max-width: 625px) {
-    // display: none;
-    justify-content: center;
-  }
-  .mapouter{position:relative;text-align:right;height:200px;width:200px;}
-  .gmap_canvas {overflow:hidden;background:none!important;height:200px;width:200px;}
-  .info,.location{
-    margin-bottom: auto;
-    h3{
-      font-size: 36px;
-      font-weight: $wt-reg;
-      color: $white;
-    }
-    h4{
-      font-size: 16px;
-      font-weight: $wt-bold;
-      color: $white;
-      margin: 0 0 6px 0;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      a{
-        text-decoration: none;
-        color: $white;
-        margin-left: 1rem;
-      }
+  padding: 1.5rem 2rem;
+  background-color: $grey;
+  gap: 1rem;
+  .MuiGrid-item{
+    @media screen and (max-width : $sm) {
+      justify-content: center !important;
     }
   }
-  .info{
-    min-width: 250px;
-    .logo{
-      width: 150px;
-      height: 80px;
-      object-fit: contain;
-    }
-    img{
-      margin-bottom: 1rem;
-    }
-    
-  .icon{
-    img{
-      margin-bottom: 0;
+  .logo{
+    width: 115px;
+    height: 85px;
+    object-fit: contain;
+  }
+  .copyright{
+    margin: 0;
+  }
+  span{
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 16px;
+
+  }
+  .country{
+    svg{
+      color: $primary-green;
+      margin-right: 1rem;
     }
   }
-  }
-  .location{
-    margin-right: 4rem;
+  .social{
+    svg{
+      font-size: 2rem;
+    }
   }
 }
