--- a/app/components/ContactUs/style.scss
+++ b/app/components/ContactUs/style.scss
@@ -1,112 +1,79 @@
 @import '../../styles/base/main.scss';
-.contactUsWrapper{
-  width: 100vw;
-  height: 100vh;
-  min-width: fit-content;
-  position: absolute;
-  top: 1rem;
-  left: 0;
-  z-index: 100000;
-  @include centreAlign; 
-  .modal{
-    min-width: 300px;
-    min-height: 200px;
-    // max-height: 80vh;
-    // overflow-y: auto;
-    &::-webkit-scrollbar{
-      width: 5px;
-    }
-    &::-webkit-scrollbar-thumb {
-      background-color: $grey;
-      outline: none;
-      border-radius: 4px;
-    }
-    @include spaceBetween;
-    padding: 1rem 4rem ;
+.contactUs{
+  @include bannerContent;
+  .header{
     background-color: $white;
-    flex-direction: column;
-    border-radius: 8px;
-    box-shadow: 0 0 7px 1px $darkGrey;
-    position: relative;
-    .title{
-      text-align: center;
-      font-size: 36px;
-      font-weight: $wt-extraBold;
+    @include titleDesc;
+  }
+  .innerWrapper{
+    gap: 3rem;
+    margin-bottom: 5rem;
+    @media screen and (max-width : $md) {
+      width: 90%;
+      margin: auto;
+    }
+    h4{
+      font-weight: normal;
+      font-size: 35px;
+      line-height: 48px;
       color: $prim-highlight;
     }
-    .field{
-      display: flex;
+    .form{
+
+      margin-bottom: auto;
+      .input{
+        width: 100%;
+        margin: 1rem 0;
+        .MuiFilledInput-root{
+          border-radius: 4px;
+        }
+        .MuiFilledInput-underline:before{
+          border: 0;
+        }
+        input{
+          @media screen and (max-width : $md) {
+            padding: 0.6rem 0.4rem;
+          }
+        }
+      }
+    }
+    .location{
       flex-direction: column;
-      margin:  0;
-      width: 100%;
-      label{
-        font-size: 22px;
-        font-weight: $wt-bold;
-        color: $prim-highlight;
-        margin-bottom: 0.5rem;
-      }
-      input,textarea{
-        height: 36px;
-        margin-bottom: 0.5rem;
-        border-radius: 4px;
-        border: 1px solid $darkGrey;
-        min-width: 400px;
-        padding-left: 1rem;
-        color: $darkGrey;
-        font-size: 16px;
-        font-weight: $wt-bold;
-        &:focus,&:active,&:hover{
-          border: 1px solid $darkGrey;
-          outline: none;
-        }
-        &::placeholder{
-          font-size: 16px;
-          color: $darkGrey;
-        }
-        @media  (max-width: 600px){
-          min-width: 150px;
-          max-width: 100%;  
+      margin-bottom: auto;
+      .gmap_canvas{
+        @media screen and (max-width : $md) {
+          width: 90%;
+          margin: auto;
+          iframe{
+            height: 400px !important;
+          }
         }
       }
-      textarea{
-        height: 100px;
-      }
-      button{
-        margin-left: auto;
-        height: 40px;
-        font-size: 22px;
-      }
-    }
-    .formGroup{
-      @include spaceBetween;
-      width: 100%;
-      gap: 2rem;
-      .field{
-        width: 45%;
-      }
-      @media (max-width : 530px) {
-        flex-direction: column;
-        gap: 0;
-        .field{
-          width: 100%;
+      .address{
+        @media screen and (max-width : $md) {
+          margin-bottom: 2rem;
+        }
+        h4{
+          margin: 2rem 0;
+        }
+        p{
+          font-weight: normal;
+          font-size: 18px;
+          line-height: 25px;
+          margin: 2px 0;
+          @media screen and (max-width : $md) {
+            text-align: center;
+          }
+          a{
+            text-decoration: none;
+            color: $black;
+          }
+
+        }
+        .contact{
+          margin-top: 2rem;
         }
       }
-    }
-    img{
-      position: absolute;
-      top: 10px;
-      right: 16px;
-      background-color: transparent;
-      cursor: pointer;
-    }
-  }
-  
-  @media  (max-width: 500px){
-    // width: 143vw;
-    .modal{
-      padding: 1rem 2rem;
-      min-width: 200px;
-      max-width: 250px;
     }
   }
 }
