--- a/app/styles/base/colors.scss
+++ b/app/styles/base/colors.scss
@@ -8,6 +8,6 @@ $blue : #00b5e2;
 $green : #a9c23f;
 $yellow : #ffcd00;
 $red : #ee5340;
-$grey : #F2F2F2;
+$grey : #E8E8E8;
 $darkGrey : #555555;
 $backgroundGreen : rgba(0, 160, 161, 0.2);
