--- a/app/styles/base/mixins.scss
+++ b/app/styles/base/mixins.scss
@@ -13,3 +13,82 @@
   -webkit-box-shadow: -7px 7px 7px -2px rgba(85,85,85,0.83);
   -moz-box-shadow: -7px 7px 7px -2px rgba(85,85,85,0.83);
 }
+@mixin titleDesc {
+  h2{
+    text-align: center;
+    color: $primary-green;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 41px;
+    margin: 0;
+    margin-bottom: 9px;
+    padding-top: 2rem;
+    @include fontAdjust($sm,24px,30px);
+  }
+  p{
+    color: $prim-highlight;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    margin: 0;
+    padding-bottom: 2rem;
+    @include fontAdjust($sm,16px,24px);
+  }
+}
+@mixin fontAdjust($width,$font,$lineHeight : false) {
+  @media screen and (max-width : $width) {
+    font-size: $font;
+    @if $lineHeight {
+      line-height: $lineHeight;
+    }
+  }
+}
+@mixin bannerContent {
+  
+  .banner{
+    height: 500px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-image: url('./Banner.png');
+    background-size: cover;
+    @media screen and (max-width : $md) {
+      background-image: url('./BannerSm.png');
+      height: 250px;
+    }
+    @media screen and (max-width : $sm) {
+      height: 200px;
+    }
+    .content{
+      padding-left: 4rem;
+      color: $white;
+      height: 100%;
+      max-width: 40%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      @media screen and (max-width : $md) {
+        max-width: 70%;
+      }
+      h2{
+        font-weight: 300;
+        font-size: 65px;
+        line-height: 89px;
+        margin: 1rem 0;
+        @include fontAdjust($md,48px , 40px);
+        @include fontAdjust($sm,30px , 30px);
+        @media screen and (max-width : $sm) {
+          margin: 0.6rem 0;
+        }
+      }
+      h4{
+        margin: 0 0 1rem 0;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 27px;
+        @include fontAdjust($sm,16px , 20px);
+      }
+    }
+  }
+}
