--- a/app/styles/base/main.scss
+++ b/app/styles/base/main.scss
@@ -80,6 +80,14 @@ $sm : 700px;
     border-color: #151f6d;
   }
 }
+.errorText{
+  color: $red;
+  margin: 0;
+  font-size: 14px;
+  line-height: 24px;
+  width: 100%;
+  text-align: left;
+}
 $tablet : 1100px;
 
 
