--- a/app/components/Downloads/style.scss
+++ b/app/components/Downloads/style.scss
@@ -21,6 +21,12 @@
       border-bottom: 12px solid $primary-green;
       margin-bottom: 2rem;
     }
+    h3{
+      margin: 0;
+      font-size: 24px;
+      line-height: 35px;
+      color: $prim-highlight;
+    }
     .materials,.manuals{
       flex-direction: column;
       @include spaceBetween;
@@ -45,9 +51,12 @@
         text-align: left;
         font-weight: 300;
         font-size: 25px;
-        color: $black;
         cursor: pointer;
         line-height: 34px;
+        a{
+          color: $black;
+          text-decoration: none;
+        }
         @media screen and (max-width : $md) {
           text-align: center;
         }
