--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -15,15 +15,16 @@
     @include spaceBetween;
     padding: 0 3rem;
     .image{
-      width: 140px;
       @include centreAlign;
       justify-content: flex-start;
-      height: 90px;
       cursor: pointer;
+      width: 200px;
+      height: 150px;
+      max-height: 90%;
       img{
-        width: 140px;
-        height: 104px;
-        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
       }
     }
     .KL__header_menu{
@@ -67,7 +68,18 @@
     // border: 1px solid black;
     padding: 0 3rem;
     .image{
+      @include centreAlign;
+      justify-content: flex-start;
       margin-right: auto;
+      cursor: pointer;
+      width: 200px;
+      height: 150px;
+      max-height: 90%;
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
     }
     .dropdown{
       position: relative;
