--- a/app/components/Products/DisplayProducts/style.scss
+++ b/app/components/Products/DisplayProducts/style.scss
@@ -18,7 +18,7 @@
   .products{
     // padding: 0 8rem;
     width: 80%;
-    margin: auto;
+    margin: 5rem auto;
     .MuiAccordionSummary-content, .MuiAccordionSummary-content.Mui-expanded {
       margin: 0px ;
     }
